# aks-store-demo

src/agents/admin-agent/: .env.example  Dockerfile  README.md  app.py  chainlit.md  requirements.txt
src/agents/admin-agent/.chainlit/: config.toml
src/agents/admin-agent/agent/: __init__.py  admin_agent.py  tools.py
src/agents/admin-agent/config/: __init__.py  settings.py
src/agents/admin-agent/kubernetes/: README.md  admin-agent-configmap.yaml  admin-agent-deployment.yaml  admin-agent-hpa.yaml  admin-agent-ingress.yaml  admin-agent-networkpolicy.yaml  admin-agent-pdb.yaml  admin-agent-secrets.yaml  admin-agent-service.yaml  admin-agent-serviceaccount.yaml  (+1 more)
src/agents/customer-agent/: .dockerignore  .env.example  Dockerfile  HighLevelArchitecture.md  README.md  app.py  chainlit.md  pyproject.toml  requirements.txt  session_customer.py
src/agents/customer-agent/agent/: __init__.py  customer_agent.py  tools.py
src/agents/customer-agent/config/: __init__.py  settings.py
src/agents/customer-agent/kubernetes/: README.md  customer-agent-configmap.yaml  customer-agent-deployment.yaml  customer-agent-hpa.yaml  customer-agent-ingress.yaml  customer-agent-networkpolicy.yaml  customer-agent-pdb.yaml  customer-agent-secrets.yaml  customer-agent-service.yaml  customer-agent-serviceaccount.yaml  kustomization.yaml
src/agents/customer-agent/services/: __init__.py  order_service_client.py  product_service_client.py
src/agents/customer-agent/telemetry/: gen_ai_semantics.py  k8s_semantics.py  m365_agent_integration.py  otel_setup.py
src/agents/customer-agent/tests/: test_tools.py
src/business-telemetry/: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  __init__.py  business_events.py  config.py  fabric_sinks.py  m365_agent_integration.py  main.py  pyproject.toml  requirements.txt  sdk.py  telemetry_client.py
src/business-telemetry/docs/: FABRIC_INTEGRATION.md
src/business-telemetry/examples/: admin_agent_integration.py  customer_agent_integration.py
src/business-telemetry/kubernetes/: deployment.yaml
src/business-telemetry/tests/: test_telemetry.py
(+8 files in other folders)
